--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -122,7 +122,11 @@
             <version>1.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>1.5.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
